--- a/unit3_problem1/templates/blog.html
+++ b/unit3_problem1/templates/blog.html
@@ -2,7 +2,9 @@
 <html>
     <title>{{title}}</title>
     <body>
-        <div class="blog-title">{{title}}</div>
+        <div class="blog-title">{{topic}}</div>
         <div class="blog-post">{{post}}</div>
+        <hr/>
+        <a href="/">Return to Front</a>
     </body>
 </html>
