--- a/unit3_problem1/templates/submit.html
+++ b/unit3_problem1/templates/submit.html
@@ -3,6 +3,55 @@
     <head>
         <title>Submit Post</title>
     </head>
+    <style type="text/css">
+        body {
+        font-family: sans-serif;
+        width: 800px;
+        margin: 0 auto;
+        padding: 10px;
+        }
+        .error {
+            color: red;
+        }
+        label {
+            display: block;
+            font-size: 20px;
+        }
+        input[type="text"] {
+            width: 400px;
+            font-size: 20px;
+            padding: 2px;
+        }
+        textarea {
+            width: 600px;
+            height: 400px;
+            font-size: 17px;
+            font-family: monospace;
+        }
+        input [type="submit"]{
+            font-size: 24px;
+        }
+        hr {
+            margin: 20px auto;
+        }
+        .blogpost + .blogpost {
+            margin-top: 20px;
+        }
+        .blog-topic {
+            font-weight: bolder;
+            font-size: 24px;
+        }
+        .blog-post {
+            margin: 0;
+            font-size: 17px;
+        }
+        .blog-permalink {
+            font-size: small;
+        }
+
+    </style>
+
+
     <body>
         <h1> What are you thinking?</h1>
         <form method="POST" action="/submit">
