proper end points and parameters

--- a/unit3_problem1/templates/front.html
+++ b/unit3_problem1/templates/front.html
@@ -54,7 +54,7 @@
 
     <body>
         <h1> All is well</h1>
-        <a href="/submit">New Post</a>
+        <a href="/newpost">New Post</a>
         <hr>
         {% for post in allposts %}
             <div class="blogpost">
