chapter 4 working solution

--- a/unit4_problems/templates/form.html
+++ b/unit4_problems/templates/form.html
@@ -2,7 +2,7 @@
 <html>
         <title>Form</title>
     <body>
-        <form method="post" action="/">
+        <form method="post" action="/signup">
         <label>
         Name:
         <input type="text" name="username" value="{{username}}">
