--- a/wiki/templates/wiki.html
+++ b/wiki/templates/wiki.html
@@ -55,11 +55,9 @@
     </style>
 
     <body>
-        <div class="blog-topic">{{topic}}</div>
-        <div class="blog-post">{{post}}</div>
+        <div class="blog-topic">{{title}}</div>
+        <div class="blog-post">{{content}}</div>
         <hr/>
         <a href="/">Return to Front</a>
     </body>
-    <br/>
-    Queried {{seconds}} seconds ago.
 </html>
