--- a/wiki/templates/wiki.html
+++ b/wiki/templates/wiki.html
@@ -55,6 +55,11 @@
     </style>
 
     <body>
+        <div>
+            <a href="/signup">Signup</a>
+            <a href="/signin">Signin</a>
+            <a href="/edit/{{title}}">Edit</a>
+        </div>
         <div class="blog-topic">{{title}}</div>
         <div class="blog-post">{{content}}</div>
         <hr/>
