proper html tag for textarea

--- a/wiki/templates/edit.html
+++ b/wiki/templates/edit.html
@@ -59,7 +59,9 @@
             <input type="hidden" name="title" value="{{title}}">
         </label>
         <label>
-            <input type="textarea" name="content" value="{{content}}">
+            <div>
+                <textarea name="content">{{content}}</textarea>
+            <div>
         </label>
         <br/>
         <input type="submit">
