--- a/wiki/templates/wiki.html
+++ b/wiki/templates/wiki.html
@@ -57,7 +57,7 @@
     <body>
         <div>
             <a href="/signup">Signup</a>
-            <a href="/signin">Signin</a>
+            <a href="/login">Signin</a>
             <a href="/edit/{{title}}">Edit</a>
         </div>
         <div class="blog-topic">{{title}}</div>
