edit link works fine

--- a/wiki/templates/wiki.html
+++ b/wiki/templates/wiki.html
@@ -58,7 +58,7 @@
         <div>
             <a href="/signup">Signup</a>
             <a href="/login">Signin</a>
-            <a href="/edit/{{title}}">Edit</a>
+            <a href="/_edit/{{title}}">Edit</a>
         </div>
         <div class="blog-topic">{{title}}</div>
         <div class="blog-post">{{content}}</div>
