--- a/wiki/templates/login.html
+++ b/wiki/templates/login.html
@@ -12,6 +12,9 @@
         <input type="password" name="password" value="">
         </label>
         <div style="color: red">{{login_error}}</div>
+        <label>
+            <input type="hidden" name="referer" value="{{referer}}">
+        </label>
         <input type="submit">
         </form>
     </body>
